<resources>
    <string name="app_name">E-Hajira</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="institute_settings">Institute Settings</string>
    <string name="user_management">User Management</string>
    <string name="about">About</string>
    <string name="server_settings">Server Settings</string>
    <string name="notice_management">Notice Management</string>
    <string name="list_of_user">List Of User</string>
    <string name="institute_id">Institute ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="device_id">Device ID</string>
    <string name="add_user_type">Add User Type</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="user_id">User Id</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_fingerprints">Add Fingerprints</string>
    <string name="select_designation">Select Designation</string>
    <string name="select_sction">Select section</string>
    <string name="select_department">Select department</string>
    <string name="select_shift">Select shift</string>
    <string name="select_type">Select user type</string>
    <string name="pin_no">Pin No</string>
    <string name="line_description">Line Description</string>
    <string name="notice">Notice</string>
    <string name="folder">Folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="select_line_description">Select line description</string>
</resources>
