<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvInstituteSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/institute_settings"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvUserManagement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/user_management"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvListUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/list_of_user"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvNoticeManagement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/notice_management"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvServerSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/server_settings"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/change_password"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/pill_rect_white_light_ash_stroke">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/about"
                    android:textColor="@color/black_87_percent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>