<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.InstituteSettingActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/evInstituteId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/institute_id"
                android:padding="16dp" />

            <EditText
                android:id="@+id/evInstituteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                android:padding="16dp" />

            <EditText
                android:id="@+id/evInstituteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/address"
                android:padding="16dp" />

            <EditText
                android:id="@+id/evInstituteMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:digits="0123456789"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:padding="16dp" />

            <EditText
                android:id="@+id/evInstituteDeviceId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/device_id"
                android:padding="16dp" />

            <Button
                android:id="@+id/btnAddUserType"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_user_type" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fblUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:flexDirection="column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:textSize="24sp" />


            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/btnAddDesignation"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Add Designation" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fblDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:flexDirection="column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Head Master"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Assistant Teacher"
                    android:textSize="24sp" />

            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/btnAddDepartment"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Add Department" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fblDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:flexDirection="column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chemistry"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Physics"
                    android:textSize="24sp" />

            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/btnAddSection"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Add Section" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fblSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:flexDirection="column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2A"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="2B"
                    android:textSize="24sp" />

            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/btnAddShift"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Add Shift" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fblShift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:flexDirection="column">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Day"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Night"
                    android:textSize="24sp" />

            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/btnDone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/done" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>